# text

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  backends.example.json  pencil-shadcn.pen  program.react-perf.md  pyproject.toml
.github/workflows/: release-artifacts.yml
crates/tf-features/: Cargo.toml
crates/tf-features/src/: lexical.rs  lib.rs  ngram.rs  perf_bench.rs  syntactic.rs  unicode.rs
docs/: README.md  design.md
docs/development/: deployment.md  setup.md
docs/plans/: 2026-02-16-text-forensics-design.md  2026-03-06-docs-design.md  2026-03-06-docs-implementation.md  2026-03-07-vertical-data-visualization-design.md  2026-03-08-frontend-visual-regression-plan.md  2026-03-08-generative-ui-design.md  2026-03-08-product-repositioning-design.md  2026-03-08-product-repositioning-implementation.md
docs/product/: product-overview.md  requirements.md
docs/technical/: architecture.md  backend.md  data-flow.md  frontend-quality-audit.md  frontend.md
sample/: analysis_report.md
scripts/release/: build_api_sidecar.py  build_cli_binary.py  build_desktop_bundle.sh  install_cli_unix.sh  install_cli_windows.ps1  run_python.js  text_api_entry.py  text_cli_entry.py
src/text/: __init__.py  app_settings.py
src/text/api/: app.py  (+4 more)
tests/: test_agent_json_fallbacks.py  test_analysis_runner_cancellation.py  test_analysis_runner_duration_format.py  test_analysis_runner_uses_cache.py  test_analysis_store_list_query_shape.py  test_api_analysis_cancel.py  test_api_analysis_detail_contract.py  test_api_analysis_retry.py  test_api_features_on_demand.py  test_api_models_backends.py  test_api_observability.py  test_api_progress_stream_bdd.py  test_api_report_qa_stream.py  test_api_settings.py  test_computational_agent_bdd.py  test_computational_metrics.py  test_decision_engine_narrative.py  test_embeddings_singleton.py  test_extractor_fallback_ngrams.py  test_feature_cache_batch_ops.py  test_feature_extractor_batch_equivalence.py  test_llm_backend_retry.py  test_llm_lazy_import.py  test_orchestrator_task_context.py  test_parse_findings_layer.py  test_progress_manager.py  test_progress_manager_bdd.py  test_psycholinguistics_agent.py  test_report_renderer_taste.py  test_schema_finding_layer.py  test_sociolinguistics_agent.py  test_synthesis_persona_profiles.py  test_taste_scorer.py
tests/perf/: test_computational_scaling_relative.py  test_extract_batch_relative.py
web/: README.md  eslint.config.mjs  lighthouse-report.json  lighthouserc.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  results.tsv
web/.lighthouseci/: links.json
web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+129 files in other folders)
