[package]
name = "tf-features"
version = "0.1.0"
edition = "2021"

[lib]
name = "tf_features"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
rayon = "1.10"
unicode-segmentation = "1.12"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
