[package]
name = "text_desktop"
version = "0.1.0"
description = "Text forensics desktop client"
authors = ["text contributors"]
edition = "2021"

[workspace]

[lib]
name = "text_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
